--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "@typescript-eslint/parser": "^8.8.0",
     "@typescript-eslint/typescript-estree": "^8.8.0",
+    "antd": "^5.21.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
