--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@typescript-eslint/parser": "^8.8.0",
     "@typescript-eslint/typescript-estree": "^8.8.0",
     "antd": "^5.21.2",
+    "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2"
