--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@typescript-eslint/typescript-estree": "^8.8.0",
     "antd": "^5.21.2",
     "axios": "^1.7.7",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
